--- a/iphone6s/index.html
+++ b/iphone6s/index.html
@@ -208,6 +208,48 @@
     </div>
 </div>
 
+<div class="ip-bn11">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-5 wow fadeInLeft" data-wow-duration="1.5s" data-wow-offset="60">
+                <div class="ip-bntitle">
+                    Trải nghiệm thông minh trên nền tảng iOS 9
+                </div>
+                <div class="ip-bninfo">
+                    Điện thoại iPhone 6S ra mắt đi kèm hệ điều hành iOS 9, hệ điều hành tiên tiến, thông minh và an toàn nhất từ trước đến nay
+                    trên thiết bị di động. Các ứng dụng mới được nâng cấp, Siri hiểu bạn hơn, tiết kiệm pin và tài nguyên hệ thống. Nhờ đó, iPhone 6S
+                    sẽ vận hành rất nhanh và mượt với một thời gian lấu nhất, đem lại trải nghiệm hoàn chỉnh dành cho chính bạn.
+                </div>
+            </div>
+            <div class="col-xs-7 wow fadeInRight" data-wow-duration="1.5s" data-wow-offset="60">
+                <img class="ip-bn5img" src="images/ip-bn11.png" alt="">
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="ip-bn12">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 wow fadeInLeft" data-wow-duration="1.5s" data-wow-offset="60">
+                <div class="ip-bntitle">
+                    Why there’s nothing quite like iPhone.
+                </div>
+                <div class="ip-bninfo">
+                    It’s no one thing. For instance, iPhone and iOS 9 work seamlessly together. They enhance each other, which enhances your
+                    experience. The iPhone camera makes taking stunning photos and videos incredibly easy. So easy in fact that it’s become
+                    the world’s most popular camera. iPhone has the App Store, iCloud, FaceTime, Messages, and Touch ID. Things that work
+                    so reliably well that they’re more than features. They become essentials. iPhone is also secure. And it looks out for
+                    your privacy and health. So iPhone is iPhone for many reasons. And one unshakeable belief. That, above all, a phone should
+                    be absolutely simple, beautiful, and magical to use.
+                </div>
+            </div>
+            <div class="col-xs-12 wow fadeInRight" data-wow-duration="1.5s" data-wow-offset="60">
+                <img class="ip-bn5img" src="images/ip-bn12.png" alt="">
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
